# EVTOL_Abstraction

./: CMakeLists.txt
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  test_evtol_methods
src/: AlphaEVTOL.cpp  AlphaEVTOL.hpp  BravoEVTOL.cpp  BravoEVTOL.hpp  CharlieEVTOL.cpp  CharlieEVTOL.hpp  DeltaEVTOL.cpp  DeltaEVTOL.hpp  EchoEVTOL.cpp  EchoEVTOL.hpp  FleetManager.cpp  FleetManager.hpp
tests/: test_evtol_methods.cpp  test_vehicle.cpp
